--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
           
             <div class="nav-item dropdown">
                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown" style="font-size: 14px;">
-                    <i class="fa fa-address-book me-2"></i>Contact Info.
+                    <i class="fa fa-address-book me-2"></i>Contact 
                 </a>
                 <div class="dropdown-menu fade-down m-0">
                     <a href="contact.html" class="dropdown-item" style="font-size: 14px;"><i class="fa fa-phone-alt me-2"></i>Contact Us</a>
