--- a/about.html
+++ b/about.html
@@ -39,6 +39,23 @@
     </div>
     <!-- Spinner End -->
 
+      <!-- Toolbar Start -->
+<div class="container-fluid bg-light py-2 border-bottom">
+    <div class="row align-items-center px-3">
+        <div class="col-md-6 text-center text-md-start">
+            <small><i class="fa fa-envelope text-primary me-2"></i>info@elearning.com</small>
+            <small class="ms-md-4 d-block d-md-inline"><i class="fa fa-phone-alt text-primary me-2"></i>+123 456 7890</small>
+        </div>
+        <div class="col-md-6 text-center text-md-end mt-2 mt-md-0">
+            <a class="text-primary me-2" href="https://www.facebook.com/TekhaliBazarNYCTC/"><i class="fab fa-facebook-f"></i></a>
+            <a class="text-primary me-2" href="https://www.whatsapp.com/channel/0029VaDbtbcAzNbxPCKQzN44"><i class="fab fa-whatsapp"></i></a>
+            <a class="text-primary me-2" href="https://maps.app.goo.gl/6a6a5bRJmR91663aA"><i class="fas fa-map-marker-alt"></i></a>
+            <a class="text-primary" href="https://www.instagram.com/tekhalibazarnyctc/"><i class="fab fa-instagram"></i></a>
+        </div>
+    </div>
+</div>
+<!-- Toolbar End -->
+
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
         <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
