--- a/index.html
+++ b/index.html
@@ -621,44 +621,54 @@
     <!-- Footer End -->
 
 
-    <!-- Signup Modal -->
+<!-- Signup Modal -->
 <div class="modal fade" id="signupModal" tabindex="-1" aria-labelledby="signupModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content rounded-4 shadow">
         <div class="modal-header bg-primary text-white">
-          <h5 class="modal-title" id="signupModalLabel"><i class="fa fa-user-plus me-2"></i>Sign Up</h5>
+          <h5 class="modal-title" id="signupModalLabel">
+            <i class="fa fa-user-plus me-2"></i> Sign Up
+          </h5>
           <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <form action="signup-process.php" method="POST">
           <div class="modal-body px-4 py-3">
             <div class="mb-3">
               <label for="signupName" class="form-label">Full Name</label>
-              <input type="text" class="form-control" id="signupName" name="name" required>
+              <input type="text" class="form-control" id="signupName" name="name" placeholder="Enter your full name" required>
             </div>
             <div class="mb-3">
-              <label for="signupEmail" class="form-label">Email address</label>
-              <input type="email" class="form-control" id="signupEmail" name="email" required>
+              <label for="signupEmail" class="form-label">Email Address</label>
+              <input type="email" class="form-control" id="signupEmail" name="email" placeholder="example@domain.com" required>
             </div>
             <div class="mb-3">
               <label for="signupPhone" class="form-label">Phone Number</label>
-              <input type="text" class="form-control" id="signupPhone" name="phone" required>
+              <input type="tel" class="form-control" id="signupPhone" name="phone" pattern="[0-9]{10}" placeholder="10-digit number" required>
             </div>
             <div class="mb-3">
               <label for="signupPassword" class="form-label">Password</label>
-              <input type="password" class="form-control" id="signupPassword" name="password" required>
+              <input type="password" class="form-control" id="signupPassword" name="password" placeholder="Minimum 6 characters" minlength="6" required>
             </div>
             <div class="mb-3">
               <label for="signupConfirmPassword" class="form-label">Confirm Password</label>
-              <input type="password" class="form-control" id="signupConfirmPassword" name="confirm_password" required>
+              <input type="password" class="form-control" id="signupConfirmPassword" name="confirm_password" placeholder="Re-enter password" minlength="6" required>
             </div>
           </div>
           <div class="modal-footer px-4 py-3">
-            <button type="submit" class="btn btn-primary w-100">Create Account</button>
+            <button type="submit" class="btn btn-primary w-100">
+              <i class="fa fa-user-plus me-2"></i> Create Account
+            </button>
+          </div>
+          <div class="text-center pb-3">
+            <small>Already have an account?
+              <a href="#" data-bs-toggle="modal" data-bs-target="#loginModal" data-bs-dismiss="modal">Login here</a>
+            </small>
           </div>
         </form>
       </div>
     </div>
   </div>
+  
   
 
 
