add new css file and code modify

--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet">
+    <link href="css/style2.css" rel="stylesheet">
+  
 </head>
 
 <body>
@@ -43,8 +45,8 @@
 <div class="container-fluid bg-light py-2 border-bottom">
     <div class="row align-items-center px-3">
         <div class="col-md-6 text-center text-md-start">
-            <small><i class="fa fa-envelope text-primary me-2"></i>info@elearning.com</small>
-            <small class="ms-md-4 d-block d-md-inline"><i class="fa fa-phone-alt text-primary me-2"></i>+123 456 7890</small>
+            <small><a href="mailto:info@elearning.com" class="fa fa-envelope text-primary me-2"></a><a href="mailto:info@elearning.com"><span class="text-dark">info@elearning.com</span></a></small>
+            <small class="ms-md-4 d-block d-md-inline"><a href="tel:+91 86704 36605" class="fa fa-phone-alt text-primary me-2"></a><a href="tel:+91 86704 36605"><span class="text-dark">+91 86704 36605</span></a></small>
         </div>
         <div class="col-md-6 text-center text-md-end mt-2 mt-md-0">
             <a class="text-primary me-2" href="https://www.facebook.com/TekhaliBazarNYCTC/"><i class="fab fa-facebook-f"></i></a>
@@ -158,7 +160,14 @@
 </nav>
 <!-- Navbar End -->
 
-
+<!-- Scrolling Banner Start -->
+<div class="scrolling-banner bg-dark text-warning py-2 px-3">
+    <div class="scrolling-text">
+        <strong>Edufuture Academy, An Autonomous Body/Institute Regd. under Trust Act, Govt. of W.B. Based on Indian Trust. Regd. MSME Govt. of India.</strong>
+    </div>
+</div>
+<!-- Scrolling Banner End -->
+ 
     <!-- Carousel Start -->
     <div class="container-fluid p-0 mb-5">
         <div class="owl-carousel header-carousel position-relative">
